--- a/the-recipe-finder/src/index.css
+++ b/the-recipe-finder/src/index.css
@@ -7,7 +7,7 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin: 16px;
-  width: 620px;
+  width: 700px;
   transition: transform 0.2s;
 
 }
@@ -134,6 +134,8 @@ body {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   max-width: 600px;
 
